# rust-argon2

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: argon2.rs  block.rs  common.rs  config.rs  context.rs  core.rs  decoded.rs  digest.rs  encoding.rs  error.rs  lib.rs  memory.rs  result.rs  thread_mode.rs  variant.rs  version.rs
tests/: integration_test.rs
