[package]
name = "rust-argon2"
version = "0.8.3"
authors = ["Martijn Rijkeboer <mrr@sru-systems.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust implementation of the Argon2 password hashing function."
documentation = "https://docs.sru-systems.com/rust-argon2/0.8.0/argon2/"
homepage = "https://github.com/sru-systems/rust-argon2"
repository = "https://github.com/sru-systems/rust-argon2"
readme = "README.md"
keywords = ["argon2", "argon2d", "argon2i", "hash", "password"]

[lib]
name = "argon2"

[features]
default = ["crossbeam-utils"]

[dependencies]
base64 = "0.13"
blake2b_simd = "0.5"
constant_time_eq = "0.1.4"
crossbeam-utils = { version = "0.8", optional = true }
serde = { version = "1.0.116", optional = true, features=["derive"] }

[dev-dependencies]
hex = "0.4"
