[package]
name = "rust-argon2"
version = "2.1.0"
authors = ["Martijn Rijkeboer <mrr@sru-systems.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Rust implementation of the Argon2 password hashing function."
documentation = "https://docs.sru-systems.com/rust-argon2/2.1.0/argon2/"
homepage = "https://github.com/sru-systems/rust-argon2"
repository = "https://github.com/sru-systems/rust-argon2"
readme = "README.md"
keywords = ["argon2", "argon2d", "argon2i", "hash", "password"]

[lib]
name = "argon2"

[dependencies]
base64 = "0.22"
blake2b_simd = "1.0"
constant_time_eq = "0.4.2"
serde = { version = "1.0", optional = true, features=["derive"] }

[dev-dependencies]
hex = "0.4"
